<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/title_home" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/nav_upload"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/title_upload" />
    <item
        android:id="@+id/nav_quiz"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/title_quiz" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_profile" />
</menu>