<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/space_24">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/offline_logo_content_description"
            android:src="@drawable/graduationcap201" />

        <TextView
            style="@style/TextAppearance.AIStudyAssistance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20"
            android:text="@string/offline_title" />

        <TextView
            style="@style/TextAppearance.AIStudyAssistance.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:gravity="center"
            android:text="@string/offline_subtitle"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRefreshConnection"
            style="@style/Widget.AIStudyAssistance.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/space_24"
            android:text="@string/offline_refresh" />

    </LinearLayout>
</ScrollView>

