<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_pill_button"
    android:backgroundTint="@color/card_bg"
    android:padding="@dimen/space_24">

    <View
        android:id="@+id/viewDrag"
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:background="@color/divider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextAppearance.AIStudyAssistance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:text="@string/profile_photo"
        app:layout_constraintTop_toBottomOf="@id/viewDrag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        style="@style/TextAppearance.AIStudyAssistance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:text="@string/profile_photo_sheet_subtitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnViewPhoto"
        style="@style/Widget.AIStudyAssistance.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_20"
        android:text="View Photo"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUploadChange"
        style="@style/Widget.AIStudyAssistance.Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_12"
        android:text="@string/profile_photo_upload"
        app:layout_constraintTop_toBottomOf="@id/btnViewPhoto" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRemovePhoto"
        style="@style/Widget.AIStudyAssistance.Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_12"
        android:text="@string/profile_photo_remove"
        app:layout_constraintTop_toBottomOf="@id/btnUploadChange" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:text="@string/profile_logout_cancel_action"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_body"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnRemovePhoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
